--- a/index.html
+++ b/index.html
@@ -12,19 +12,19 @@
         <ul>
             <li><a href="index.html">Accueil</a>
             </li>
-            <li><a href="#">TP</a> <ul class="sous-menu">
+            <li><a href="#">Exercise</a> <ul class="sous-menu">
                 <li><a href="" class="html">HTML</a>
                     <ul class="sous-sous">
                         <li><a href="">CSS</a></li>
                     </ul>
-                </li>
+                </li> 
 
                 <li><a href="">CSS</a></li>
                 <li><a href="">JAVASCRIPT</a></li>
                 <li><a href="">Bdd</a></li> 
             </ul></li>
 
-            <li><a href="#">LEÇONS</a><ul class="sous-menu">
+            <li><a href="#">Leçons</a><ul class="sous-menu">
                 <li><a href="">HTML</a></li>
                 <li><a href="">CSS</a></li>
                 <li><a href="">jAVASCRIPT</a></li>
