--- a/index.html
+++ b/index.html
@@ -10,30 +10,34 @@
     <h1>DWWM </h1>
     <nav>
         <ul>
-            <li><a href="index.html">Accueil</a>
+            <li><a href="index.html">Accueil</a></li>
+            <li>
+                <a href="#">Leçon</a>
+                <ul class="sous-menu">
+                    <li><a href="" class="html">HTML</a>
+                        <ul class="sous-sous">
+                            <li><a href=""></a></li>
+                        </ul>
+                    </li>
+                    <br>
+                    <li><a href="">CSS</a></li><br>
+                    <li><a href="">JAVASCRIPT</a></li><br>
+                    <li><a href="">BDD</a></li><br>
+                </ul>
             </li>
-            <li><a href="#">Exercise</a> <ul class="sous-menu">
-                <li><a href="" class="html">HTML</a>
-                    <ul class="sous-sous">
-                        <li><a href="">CSS</a></li>
-                    </ul>
-                </li> 
-
-                <li><a href="">CSS</a></li>
-                <li><a href="">JAVASCRIPT</a></li>
-                <li><a href="">Bdd</a></li> 
-            </ul></li>
-
-            <li><a href="#">Leçons</a><ul class="sous-menu">
-                <li><a href="">HTML</a></li>
-                <li><a href="">CSS</a></li>
-                <li><a href="">jAVASCRIPT</a></li>
-                <li><a href="">base de donné</a></li> 
-            </ul></li>
-            
+            <li>
+                <a href="#">Exercise</a>
+                <ul class="sous-menu">
+                    <li><a href="">HTML</a></li>
+                    <li><a href="">CSS</a></li>
+                    <li><a href="">jAVASCRIPT</a></li>
+                    <li><a href="">base de donné</a></li>
+                </ul>
+            </li>
             <li><a href="#c">Contact</a></li>
         </ul>
     </nav>
+    
 </header>
 <footer>
 <div>
