--- a/victor.html
+++ b/victor.html
@@ -6,11 +6,8 @@
     <script src="base.js"></script>
     <title>Document</title>
 </head>
-<body><div id="includedContent"></div>
-   
-   
-   
-   
+<body>
+    <div id="includedContent"></div>
     
 </body>
 </html>
