--- a/base_html.html
+++ b/base_html.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="exercise.css">
     <script src="base_exercise.js"></script>
+    <script src="https://cdn.jsdelivr.net/ace/1.4.12/ace.js"></script>
+
     <title>Document</title>
 </head>
 <body>
@@ -21,6 +23,8 @@
         </div>
             </div>
         <div id="Exercise" class="contenue">
+            <div id="editor">ddddddd</div>
+
             <h3>Exercise</h3>
             
         </div>
