--- a/exercise/base_exercise.html
+++ b/exercise/base_exercise.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="exercise.css">
     <script src="base_exercise.js"></script>
-    <script src="https://cdn.jsdelivr.net/ace/1.4.12/ace.js"></script>
+    <script src="https://cdn.jsdelivr.net/requirejs/2.3.6/require.js"></script>
+    <script src="https://cdn.jsdelivr.net/monaco-editor/0.24.0/min/vs/loader.js"></script>
+
 
     <title>Document</title>
 </head>
@@ -23,9 +25,10 @@
         </div>
             </div>
         <div id="Exercise" class="contenue">
-            <div id="editor">ddddddd</div>
-
             <h3>Exercise</h3>
+            <div id="editor" style="height: 400px; background-color: aquamarine;">ddddddddddd</div>
+    <button onclick="runCode()">Exécuter</button>
+
             
         </div>
 
