--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="base.js"></script>
-    <title>Document</title>
+    <title>Leçon HTML</title>
 </head>
-<body><div id="includedContent"></div>
+<body><div id="includedContent">
+
    
    
    
    
-    
+</div>  
 </body>
 </html>
